--- a/ingress-sample/ingress-multihost-example.yaml
+++ b/ingress-sample/ingress-multihost-example.yaml
@@ -6,13 +6,13 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: croc-hunter-v1.ingress.k8s.estrado.io
+  - host: bruno.52.161.104.95.xip.io
     http:
       paths:
       - backend:
           serviceName: croc-hunter-s1
           servicePort: 80
-  - host: croc-hunter-v2.ingress.k8s.estrado.io
+  - host: mani.52.161.104.95.xip.io
     http:
       paths:
       - backend:
