Install spinnaker in k8s cluster

--- a/eur-helm/templates/eurekaclientservice.yaml
+++ b/eur-helm/templates/eurekaclientservice.yaml
@@ -9,4 +9,4 @@ spec:
   ports:
   - port: {{ .Values.eurcliservice.containerPort }}
   selector:
-    app: {{ .Values.eurcliservice.name }}
+    app: {{ .Values.eurcliservice.deploymentName }}
