--- a/canary-spinnaker/using-spinnaker-helm-chart-and-existing-cluster/config/values.yaml
+++ b/canary-spinnaker/using-spinnaker-helm-chart-and-existing-cluster/config/values.yaml
@@ -65,7 +65,7 @@ gate:
   allowedOriginsPattern: '^https?://(?:localhost|127.0.0.1|[^/]+\.example\.com)(?::[1-9]\d*)?/?$'
 
 # Bucket to use when storing config data in S3 compatible storage
-storageBucket: spinnaker
+  storageBucket: spinnaker
 
 # Change service type for UI service
 serviceType: ClusterIP
@@ -88,7 +88,7 @@ redis:
 # Minio access/secret keys for the in-cluster S3 usage
 # Minio is not exposed publically
 minio:
-  enabled: false
+  enabled: true
   imageTag: RELEASE.2016-11-26T02-23-47Z
   serviceType: ClusterIP
   accessKey: spinnakeradmin
