--- a/eur-helm/templates/eurekaservice.yaml
+++ b/eur-helm/templates/eurekaservice.yaml
@@ -2,13 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.eurserservice.name }}
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: amit.eureka.example.com
   labels:
     app: containerPort
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: {{ .Values.eurserservice.containerPort }}
   selector:
